# Homelab-K8

./: .$Home Lab.drawio.bkp  .$Home Lab.drawio.dtmp  .gitignore  AGENT.MD  Home Lab.drawio  Makefile  Notes.md  README.md  allow-again.sh  py_requirements.txt  pyproject.toml  shutdown.sh
.claude/agents/: create-deployment.md
Ansible/: README.md  ansible.cfg  ansible_requirement.yml  init_home_lab.ansible.yml  proxmox.ansible.yml  update_media.ansible.yml
Ansible/inventory/: hosts  hosts.ini
Ansible/playbooks/: README.md  infrastructure.yml  init_k8.yml  init_k8_nodes.yml  media.yml  proxmox.yml  public services.yml  public_services.yml  sens_server.yml
Ansible/tasks/: change-python-env.yml  docker-compose-up.yml  gather-facts-ssh.yml  update.yml
Data Base Storage/: README.md  applications.md  backups.md  datapools.md  docker_volumes.md  users and groups.md
Data Base Storage/Compose files/: nextcloud.yml
Kubernetes/: README.md  kustomization.yml
Kubernetes/SealedSecrets/: sealed_cert.sh  sealed_vpn.sh  sealed_vpn_copy.sh
Kubernetes/base/: arr-apps.yml  kustomization.yml  media-viewer.yml  media-vpn.yml
Kubernetes/config/: arrUser.env  kustomization.yml
Kubernetes/helm/: consul-charts.sh  consul-values.yml  grafana-charts.sh  grafana-prom-values.yml  install-charts.sh  isti-install.md  isti.yml  loki-charts.sh  loki-values.yml  prom-charts.sh  promtail-values.yml  traefik-charts.sh  traefik-values.yml
Kubernetes/media/: kustomization.yml  media-vpn.yml
SealedSecrets/minikube/: vpn_sealed.sh
System Admin/: README.md
helm/database/: db-cluster.yml  (+2 more)
(+403 files in other folders)
