[tool.poetry]
name = "homelab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^10.0.1"
pyyaml = "^6.0.1"
ansible-core = "^2.17.0"
ansible-lint = {version = "^24.2.3", markers = "platform_system != 'Windows'"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
